@@ -35,4 +35,5 @@ Changes between 2.2.3 and 2.2.4
 - fix issue #143: call unconfigure/sessionfinish always when
   configure/sessionstart where called
 - fix issue #144: better mangle test ids to junitxml classnames
+- upgrade distribute_setup.py to 0.6.27
 
